<resources>
    <string name="app_name" translatable="false">MikuXray</string>
    <string name="app_desc">The universal proxy toolchain for Android, written in Kotlin.</string>
    <string name="project">Project</string>
    <string name="github">Source code</string>
    <string name="telegram">Telegram update channel</string>
    <string name="app_version">Version</string>
    <string name="version_x">Version (%s)</string>
    <string name="logcat">Export debug information</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_group">Group</string>
    <string name="menu_about">About</string>
    <string name="theme">Theme</string>
    <string name="group_default">Ungrouped</string>
    <string name="quick_toggle">Toggle</string>
    <string name="tile_title">Switcher</string>
    <string name="menu_traffic">Traffic</string>
    <string name="group_name">Group name</string>
    <string name="group_update">Update</string>
    <string name="group_subscription_link">Subscription link</string>
    <string name="group_create">Create group</string>
    <string name="group_edit">Edit group</string>
    <string name="group_status_empty">Empty group</string>
    <string name="group_status_empty_subscription">Not updated yet</string>
    <plurals name="group_status_proxies">
        <item quantity="one">%d profile</item>
        <item quantity="other">%d profiles</item>
    </plurals>
    <plurals name="group_status_proxies_subscription">
        <item quantity="one">%d profile | Last update: %s</item>
        <item quantity="other">%d profiles | Last update: %s</item>
    </plurals>
    <string name="group_no_difference">%s: No change</string>
    <plurals name="group_updated">
        <item quantity="one">%s: Updated %d profile</item>
        <item quantity="other">%s: Updated %d profiles</item>
    </plurals>
    <string name="group_diff">Diff (%s)</string>
    <string name="group_delete_confirm_prompt">Are you sure you want to remove this group?</string>
    <string name="group_added">Added: \n%s</string>
    <string name="group_changed">Updated: \n%s</string>
    <string name="group_deleted">Deleted: \n%s</string>
    <string name="group_duplicate">Duplicate: \n%s</string>
    <string name="service_mode">Service mode</string>
    <string name="service_mode_proxy">Proxy only</string>
    <string name="service_mode_vpn">VPN</string>
    <string name="port_proxy">SOCKS5 proxy port</string>
    <string name="port_http">HTTP proxy port</string>
    <string name="port_transproxy">Transparent proxy port</string>
    <string name="cag_route">Route settings</string>
    <string name="allow_access">Allow connections from LAN</string>
    <string name="allow_access_sum">Bind inbounds to 0.0.0.0</string>
    <string name="inbound_settings">Inbound settings</string>
    <string name="general_settings">App settings</string>
    <string name="require_http">Enable HTTP inbound</string>
    <string name="cag_ws">WebSocket settings</string>
    <string name="ws_max_early_data">Max early data</string>
    <string name="ws_browser_forwarding">Browser forwarding</string>
    <string name="ws_browser_forwarding_sum">Forward WebSocket through browser</string>
    <string name="speed_interval">Speed notification update interval</string>
    <string name="cag_misc">Misc settings</string>
    <string name="show_direct_speed">Show direct speed</string>
    <string name="show_direct_speed_sum">Show direct traffic speed in notification as well</string>
    <string name="security_settings">Security settings</string>
    <string name="allow_insecure">Skip certificate verification</string>
    <string name="allow_insecure_sum">Enabling this option without deploying other security measures leads to the success of man-in-the-middle attacks. Do NOT enable unless you know what you are doing.</string>
    <string name="traffic" translatable="false">%1$s↑ %2$s↓</string>
    <string name="speed_detail">Proxy: %1$s↑ %2$s↓
\nDirect: %3$s↑ %4$s↓</string>
    <string name="speed">%s/s</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_available">Success: HTTPS handshake took %d ms</string>
    <string name="connection_test_available_http">Success: HTTP handshake took %d ms</string>
    <string name="connection_test_error">Failed: %s</string>
    <string name="cag_dns">DNS settings</string>
    <string name="remote_dns">Remote DNS</string>
    <string name="direct_dns">Direct DNS</string>
    <string name="enable_dns_routing">Enable DNS routing</string>
    <string name="dns_routing_message">Resolve domains in bypass routes with direct DNS</string>
    <string name="enable_fakedns">Enable fake DNS</string>
    <string name="fakedns_message">May cause other applications to need to be restarted to reconnect to the network after the proxy is disconnected</string>
    <string name="hijack_dns">Hijack DNS</string>
    <string name="hijack_dns_message">Hijack DNS queries that are not sent to TUN DNS address with DNS sniffer</string>
    <string name="dns_hosts">Domain rewriting</string>
    <string name="port_local_dns">Local DNS port</string>
    <string name="require_transproxy">Enable transparent proxy inbound</string>
    <string name="transproxy_mode">Transparent proxy mode</string>
    <string name="connection_test_url">Connection test URL</string>
    <string name="probe_url">Custom test URL</string>
    <string name="profile_name">Profile name</string>
    <string name="server_address">Server</string>
    <string name="server_port">Server port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enc_method">Encryption method</string>
    <string name="protocol">Protocol</string>
    <string name="protocol_param">Protocol parameters</string>
    <string name="obfs">Obfs</string>
    <string name="obfs_param">Obfs parameters</string>
    <string name="uuid">User ID</string>
    <string name="alter_id">Alter ID</string>
    <string name="security">Transport layer security</string>
    <string name="network">Network</string>
    <string name="flow">Flow</string>
    <string name="header_type">Obfuscation header type</string>
    <string name="ws_host">WebSocket host</string>
    <string name="ws_path">WebSocket path</string>
    <string name="http_host">HTTP host</string>
    <string name="http_path">HTTP path</string>
    <string name="quic_security">QUIC Security</string>
    <string name="quic_key">Quic key</string>
    <string name="kcp_seed">mKCP seed</string>
    <string name="grpc_service_name">gRPC service name</string>
    <string name="url">URL</string>
    <string name="sni">SNI</string>
    <string name="alpn">ALPN</string>
    <string name="certificates">Certificate</string>
    <string name="pinned_peer_certificate_chain_sha256">Pinned certificate chain SHA-256</string>
    <string name="early_data_header_name">Early data header name</string>
    <string name="extra_headers">Extra headers</string>
    <string name="config_type">Config type</string>
    <string name="edit_config">Edit Config</string>
    <string name="ipv6">IPv6 route</string>
    <string name="metered">Metered Hint</string>
    <string name="metered_summary">Hint system to treat VPN as metered</string>
    <string name="menu_route">Route</string>
    <string name="route_add">Create route</string>
    <string name="delete_route_prompt">Are you sure you want to remove this route?</string>
    <string name="route_name">Route name</string>
    <string name="route_proxy">Proxy</string>
    <string name="route_bypass">Bypass</string>
    <string name="route_block">Block</string>
    <string name="route_profile">Select profile…</string>
    <string name="empty_route">Empty route</string>
    <string name="empty_route_notice">Configure some rules before saving</string>
    <string name="route_bypass_domain">Domain rule for %s</string>
    <string name="route_play_store">Play store rule for %s</string>
    <string name="route_bypass_ip">IP rule for %s</string>
    <string name="route_reset">Reset</string>
    <string name="route_reverse">Reverse proxy</string>
    <string name="route_reverse_redirect">Reverse proxy address</string>
    <string name="route_manage_assets">Manage route assets</string>
    <string name="route_assets">Assets</string>
    <string name="route_rules_provider">Route assets provider</string>
    <string name="route_rules_official">Official</string>
    <string name="route_asset_status">Local version: %s</string>
    <string name="route_asset_no_update">Already up-to-date</string>
    <string name="route_asset_updated">Updated</string>
    <string name="route_not_asset">Not an asset file: excepted .dat, but %s</string>
    <string name="route_opt_bypass_lan">Bypass private addresses</string>
    <string name="domain_strategy">Domain strategy</string>
    <string name="traffic_sniffing">Enable sniffing</string>
    <string name="enable_mux">Enable Mux</string>
    <string name="mux_concurrency">Mux concurrent Connections</string>
    <string name="proxied_apps">Per-app VPN</string>
    <string name="proxied_apps_summary">Exclude selected apps from VPN or include selected apps in VPN</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="search_apps">Search…</string>
    <string name="scanning">Scanning…</string>
    <string name="invert_selections">Invert selections</string>
    <string name="clear_selections">Clear selections</string>
    <string name="bypass_apps">Bypass</string>
    <string name="show_system_apps">Show system apps</string>
    <string name="auto_connect">Auto connect</string>
    <string name="auto_connect_summary">Restore the previous connection status after device boot or app update</string>
    <string name="service_vpn">VPN Service</string>
    <string name="service_proxy">Proxy Service</string>
    <string name="forward_success">Proxy started.</string>
    <string name="invalid_server">Invalid server address</string>
    <string name="service_failed">Failed: </string>
    <string name="stop">Stop</string>
    <string name="stopping">Stopping…</string>
    <string name="vpn_permission_denied">VPN permission denied</string>
    <string name="reboot_required">Failed to start VPN service. You might need to reboot your device.</string>
    <string name="profile_empty">Please select a profile</string>
    <string name="connect">Connect</string>
    <string name="clipboard_empty">Clipboard is empty</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="add_profile">Add profile</string>
    <string name="select_profile">Select profile</string>
    <string name="action_socks" translatable="false">SOCKS</string>
    <string name="action_http" translatable="false">HTTP</string>
    <string name="balancer_type">Type</string>
    <string name="balancer_strategy">Strategy</string>
    <string name="proxy_cat">Server settings</string>
    <string name="probe_interval">Balancer observation interval (s)</string>
    <string name="apps">Applications</string>
    <string name="route_ssid">Wi-Fi SSID</string>
    <string name="network_type">Network type</string>
    <string name="mtu">MTU</string>
    <string name="tuic_token">Token</string>
    <string name="tuic_udp_relay_mode">UDP relay mode</string>
    <string name="tuic_congestion_controller">Congestion controller</string>
    <string name="tuic_disable_sni">Disable SNI</string>
    <string name="tuic_reduce_rtt">Reduce RTT</string>
    <string name="tuic_zero_rtt_handshake">0-RTT handshake</string>
    <string name="brook_udp_over_stream">UDP over stream</string>
    <string name="one_per_line">One per line.</string>
    <string name="uwu_general_settings_title">General settings</string>
</resources>