<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:layout="@layout/uwu_banner_profile"
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />
    <PreferenceCategory
        app:title="@string/proxy_cat">
        <EditTextPreference
            android:layout="@layout/uwu_top"
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="serverPassword"
            app:title="@string/tuic_token"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:dialogMessage="@string/one_per_line"
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="serverALPN"
            app:title="@string/alpn"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="serverCertificates"
            app:title="@string/certificates"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_mid"
            app:entries="@array/tuic_udp_relay_mode_value"
            app:entryValues="@array/tuic_udp_relay_mode_value"
            app:icon="@drawable/ic_baseline_add_road_24"
            app:key="serverUDPRelayMode"
            app:title="@string/tuic_udp_relay_mode"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_mid"
            app:entries="@array/tuic_congestion_controller_value"
            app:entryValues="@array/tuic_congestion_controller_value"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="serverCongestionController"
            app:title="@string/tuic_congestion_controller"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off"
            app:icon="@drawable/ic_baseline_fingerprint_24"
            app:key="serverDisableSNI"
            app:title="@string/tuic_disable_sni" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_action_copyright"
            app:key="serverSNI"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off"
            app:icon="@drawable/baseline_flight_takeoff_24"
            app:key="serverReduceRTT"
            app:title="@string/tuic_reduce_rtt" />
        <EditTextPreference
            android:layout="@layout/uwu_bot"
            app:icon="@drawable/baseline_public_24"
            app:key="serverMTU"
            app:title="@string/mtu"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
