<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:layout="@layout/uwu_banner_profile"
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />
    <PreferenceCategory
        app:title="@string/proxy_cat">
        <EditTextPreference
            android:layout="@layout/uwu_top"
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_baseline_person_24"
            app:key="serverUsername"
            app:title="@string/username"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="serverPassword"
            app:title="@string/password"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_action_copyright"
            app:key="serverSNI"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:dialogMessage="@string/one_per_line"
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="serverALPN"
            app:title="@string/alpn"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_mid"
            app:entries="@array/tuic_congestion_controller_value"
            app:entryValues="@array/tuic_congestion_controller_value"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="serverCongestionController"
            app:title="@string/tuic_congestion_controller"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off"
            app:icon="@drawable/baseline_flight_takeoff_24"
            app:key="serverReduceRTT"
            app:title="@string/tuic_zero_rtt_handshake" />
        <SwitchPreference
            android:layout="@layout/uwu_bot_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off"
            app:icon="@drawable/baseline_wrap_text_24"
            app:key="serverBrookUdpOverStream"
            app:title="@string/brook_udp_over_stream"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
