<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:layout="@layout/uwu_sin"
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />
    <PreferenceCategory
        app:title="@string/uwu_general_settings_title">
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_top"
            app:defaultValue="0"
            app:entries="@array/balancer_type"
            app:entryValues="@array/int_array_2"
            app:icon="@drawable/ic_baseline_nfc_24"
            app:key="balancerType"
            app:title="@string/balancer_type"
            app:useSimpleSummaryProvider="true" />
        <io.nekohasekai.sagernet.widget.GroupPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_baseline_view_list_24"
            app:key="balancerGroup"
            app:title="@string/menu_group"
            app:useSimpleSummaryProvider="true" />
        <io.nekohasekai.sagernet.widget.LinkPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_baseline_cast_connected_24"
            app:key="probeUrl"
            app:title="@string/probe_url"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_baseline_local_bar_24"
            app:key="probeInterval"
            app:title="@string/probe_interval"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_bot"
            app:entries="@array/balancer_strategy_entry"
            app:entryValues="@array/balancer_strategy_value"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="balancerStrategy"
            app:title="@string/balancer_strategy"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
